Changes since labca_3_0_beta:
	2007/6/19 (Jim Sebek)
	- extended fix that was introduced (4/07) to work around problems with
	mcc compilation due to .m files residing in the same directory as .mex
	files. Now both, the labca initializer and finalizer are skipped when
	invoked during mcc compilation. Apparently this solves the problem.
Changes since labca_2
	2007/6/10 (TS):
	- call _exit() from the finalizer if called from the caRepeater fork
	must not do any other cleanup since the forked process has no thread.
	This fixes the 'starved caRepeater fork' problem (hanging process would
	never die).
	2007/6/7  (TS):
	- completely reworked the finalizer. Good shutdown now seems to work
	  w/o hangs or crashes for scilab and matlab on linux/solaris + win
	  in gui and nogui mode.
	2007/6/4  (TS):
	- ezcaDelay() now polls the Ctrl-C flag like the other calls.
	- added EZCA_ABORTED return code to flag user abort (CTRL-C) condition.
	2007/6/1  (TS):
	- Some changes to CONFIG/RELEASE/RULES for automatically finding the
	  correct mex-file extension. Also, EPICS_HOST_ARCH-specific settings
	  for the EPICS_BASE, MATLABDIR + SCILABDIR variables were implemented.
	2007/6/1  (TS):
	- stupid win32 doesn't implement c99 types :-o
	  Resort to   'epicsTypes.h'...
	2007/5/23 (TS):
	- Added lcaLastError() to retrieve the last error that was recorded.
	  The usual scilab/matlab error reporting scheme is not good enough
	  because I cannot report a vector of errors. If a lcaXXX operation
	  fails on a subset of PVs this routine can report the error status
	  for individual PVs (to be used like and possibly in addition to
	  'lasterror' in scilab/matlab).
	- Added multi-ezca interface to lcaLastError and wrappers
	  for scilab and matlab.
	- Added multi-ezca interface to ezcaNewMonitorWait and wrappers
	  for scilab and matlab.
	- Added ezcaNewMonitorWait() which blocks until new monitor data
	  becomes available. This routine is groupable.