@@ -1,4 +1,4 @@
-/* $Id: ezcaSciCint.c,v 1.24 2007/06/05 05:01:06 guest Exp $ */
+/* $Id: ezcaSciCint.c,v 1.25 2007/06/08 00:26:41 guest Exp $ */
 
 /* SCILAB C-interface to ezca / multiEzca */
 #include <mex.h>
@@ -7,6 +7,8 @@
 #include <cadef.h>
 #include <ezca.h>
 
+#include <sciclean.h>
+
 #define epicsExportSharedSymbols
 #include <shareLib.h>
 
@@ -14,6 +16,21 @@
 #include <multiEzcaCtrlC.h>
 
 epicsShareFunc int epicsShareAPI C2F(ezca)();
+
+/* Note about cleanup and errors:
+ *
+ * A lot of scilab macros (e.g., CreateVar()) expand
+ * to a check and return immediately from the current
+ * subroutine
+ *
+ *    if ( !C2F(createvar)() ) return 0;
+ *
+ * so that we don't get a chance to cleanup resources
+ * that we allocate.
+ *
+ * We employ the 'sciclean' facility to work around
+ * this problem.
+ */
 
 /* We get a lot of 'type-punned' pointer warnings, mostly
  * because the scilab header doesn't properly declare things
@@ -62,16 +79,15 @@ int i;
 static int
 arg2ezcaType(char *pt, int idx, LcaError *pe)
 {
-int m,n;
-char **s MAY_ALIAS = 0;
+int m,n,s;
 
 	if ( Rhs < idx )
 		return 0;
 
-	GetRhsVar(idx, "S", &m, &n, &s);
-	CheckRow(idx, m, n);
+	GetRhsVar(idx, "c", &m, &n, &s);
+	CheckColumn(idx, m, n);
 
-	switch ( toupper((*s)[0]) ) {
+	switch ( toupper( *(cstk(s)) ) ) {
 			case 'D': *pt = ezcaDouble; break;
 			case 'F': *pt = ezcaFloat;  break;
 			case 'L': *pt = ezcaLong;   break;
@@ -88,41 +104,64 @@ char **s MAY_ALIAS = 0;
 	return 1;
 }
 
-static int intsezcaGet(char *fname)
+static void errRaiseClean(void *obj)
 {
-int mpvs, mtmp, ntmp, itmp, jtmp;
-char     **pvs MAY_ALIAS;
-void *buf MAY_ALIAS = 0;
-TS_STAMP  *ts       = 0;
-int	      n         = 0;
-char      type      = ezcaNative;
-LcaError  theErr;
+LcaError *theErr = obj;
+	LCA_RAISE_ERROR(theErr);
+	free( theErr );
+}
+
+static LcaError *errCreate(Sciclean sciclean)
+{
+LcaError *theErr = malloc(sizeof(*theErr));
+	lcaErrorInit(theErr);
+	sciclean_push(sciclean, theErr, errRaiseClean);
+	return theErr;
+}
+
+static int intsezcaGet(char *fname, int namlen, Sciclean sciclean)
+{
+int mpvs, mtmp, ntmp, itmp, jtmp, status;
+char     **pvs MAY_ALIAS = 0;
+void      *buf MAY_ALIAS = 0;
+int	      n              = 0;
+char      type           = ezcaNative;
+TS_STAMP  *ts            = 0;
+LcaError  *theErr        = errCreate(sciclean);
 
 	CheckRhs(1,3);
 	CheckLhs(1,2);
 
  	GetRhsVar(1,"S",&mpvs,&ntmp,&pvs);
+	SCICLEAN_SVAR(pvs);
  	CheckColumn(1,mpvs,ntmp);
-
-	lcaErrorInit(&theErr);
 
 	if ( Rhs > 1 ) {
 		GetRhsVar(2, "i", &mtmp, &ntmp, &itmp);
 		CheckScalar(2, mtmp, ntmp);
 		n = *istk(itmp);
-		if ( Rhs > 2 && !arg2ezcaType(&type,3, &theErr) )
-			goto cleanup;
+		if ( Rhs > 2 && !arg2ezcaType(&type,3, theErr) )
+			goto bail;
 	}
 
 	ntmp = 1;
 	CreateCVar(Rhs + 1,"d",&ntmp,&mpvs,&ntmp,&itmp,&jtmp);
 
 	/* we can't preallocate the result matrix -- n is unknown at this point */
+	status = multi_ezca_get( pvs, &type, &buf, mpvs, &n, &ts, theErr );
 
-	if ( !multi_ezca_get( pvs, &type, &buf, mpvs, &n, &ts, &theErr ) ) {
+	/* register cleanups for memory allocated by multi_ezca_get */
+	SCICLEAN(ts);
+	if ( ezcaString == type ) {
+		SCICLEAN_SVAR(buf);
+	} else {
+		SCICLEAN(buf);
+	}
+
+	if ( !status ) {
 		for ( itmp = 1; itmp <= Lhs; itmp++ )
 			LhsVar(itmp) = 0; 
-		goto cleanup;
+		goto bail;
 	}
 
 	/* NOTE: if CreateVarxxx fails, there is a memory leak
@@ -142,55 +181,42 @@ LcaError  theErr;
 		}
 	}
 
-cleanup:
+bail:
 
-	if ( buf ) {
-		if ( ezcaString == type ) {
-			for ( itmp = 0; itmp < mpvs * n; itmp++ )
-				free( ((char**)buf)[itmp] );
-		}
-		free(buf);
- 	}
-
-	if ( ts ) {
-		free(ts);
-	}
-
-	LCA_RAISE_ERROR(&theErr);
 	return 0;
 }
 
-static int dosezcaPut(char *fname, int doWait)
+static int dosezcaPut(char *fname, int doWait, Sciclean sciclean)
 {
-int mpvs, mval, ntmp, n, i;
-void *buf MAY_ALIAS;
-char **pvs MAY_ALIAS;
-char type  = ezcaNative;
-LcaError  theErr;
+int       mpvs, mval, ntmp, n, i;
+void     *buf MAY_ALIAS;
+char    **pvs MAY_ALIAS;
+char      type   = ezcaNative;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(2,3);
 	CheckLhs(1,1);
 
 	GetRhsVar(1,"S",&mpvs,&ntmp,&pvs);
+	SCICLEAN_SVAR(pvs);
 	CheckColumn(1,mpvs,ntmp);
 
 	if ( 10 == VarType(2) ) {
-	GetRhsVar(2,"S",&mval,&n,&buf);
-	type = ezcaString;
+		GetRhsVar(2,"S",&mval,&n,&buf);
+		SCICLEAN_SVAR(buf);
+		type = ezcaString;
 	} else {
-	GetRhsVar(2,"d",&mval,&n,&i);
-	buf = stk(i);
+		GetRhsVar(2,"d",&mval,&n,&i);
+		buf = stk(i);
 	}
-
-	lcaErrorInit(&theErr);
 
 	if ( Rhs > 2 ) {
 		char t;
-		if ( !arg2ezcaType( &t, 3, &theErr ) )
-			goto cleanup;
+		if ( !arg2ezcaType( &t, 3, theErr ) )
+			goto bail;
 		if ( (ezcaString == type) != (ezcaString == t) )  {
-			lcaSetError(&theErr, EZCA_INVALIDARG, "string value type conversion not implemented, sorry");
-			goto cleanup;
+			lcaSetError(theErr, EZCA_INVALIDARG, "string value type conversion not implemented, sorry");
+			goto bail;
 		}
 		type = t;
 	}
@@ -204,57 +230,56 @@ LcaError  theErr;
 	/* cross variable size checking */
 	*sstk(i) =
 #endif
-		multi_ezca_put(pvs, mpvs, type, buf, mval, n, doWait, &theErr);
+		multi_ezca_put(pvs, mpvs, type, buf, mval, n, doWait, theErr);
 
-cleanup:
-	LCA_RAISE_ERROR(&theErr);
-
+bail:
 	return 0;
 }
 
-static int intsezcaPutNoWait(char *fname)
+static int intsezcaPutNoWait(char *fname, int namlen, Sciclean sciclean)
 {
-	return dosezcaPut(fname, 0);
+	return dosezcaPut(fname, 0, sciclean);
 }
 
-static int intsezcaPut(char *fname)
+static int intsezcaPut(char *fname, int namlen, Sciclean sciclean)
 {
-	return dosezcaPut(fname, 1);
+	return dosezcaPut(fname, 1, sciclean);
 }
 
 
-static int intsezcaGetNelem(char *fname)
+static int intsezcaGetNelem(char *fname, int namlen, Sciclean sciclean)
 {
-int m,n,i;
-char  **pvs MAY_ALIAS;
-LcaError theErr;
+int       m,n,i;
+char    **pvs MAY_ALIAS;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,1);
 	CheckLhs(1,1);
 
 	GetRhsVar(1,"S",&m,&n,&pvs);
+	SCICLEAN_SVAR(pvs);
 	CheckColumn(1,m,n);
 
 	CreateVar(2,"i",&m,&n,&i);
-	lcaErrorInit(&theErr);
-	if ( !multi_ezca_get_nelem(pvs, m, istk(i), &theErr) )
+
+	if ( !multi_ezca_get_nelem(pvs, m, istk(i), theErr) )
  		LhsVar(1)=2;
-	else
-		LCA_RAISE_ERROR(&theErr);
+
  	return 0;
 }
 
-static int intsezcaGetControlLimits(char *fname)
+static int intsezcaGetControlLimits(char *fname, int namlen, Sciclean sciclean)
 {
 int m,n,d1,d2;
 char **pvs MAY_ALIAS;
 MultiArgRec args[2];
-LcaError theErr;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,1);
 	CheckLhs(1,2);
 
 	GetRhsVar(1,"S",&m,&n,&pvs);
+	SCICLEAN_SVAR(pvs);
 	CheckColumn(1,m,n);
 
 	CreateVar(2, "d", &m, &n, &d1);
@@ -263,28 +288,26 @@ LcaError theErr;
 	MSetArg(args[0], sizeof(double), stk(d1), 0); 
 	MSetArg(args[1], sizeof(double), stk(d2), 0); 
 
-	lcaErrorInit(&theErr);
-	if ( multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetControlLimits, NumberOf(args), args, &theErr) ) {
+	if ( multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetControlLimits, NumberOf(args), args, theErr) ) {
 		for ( n=1; n<=Lhs; n++ )
 			LhsVar(n) = Rhs + n;
-	} else {
-		LCA_RAISE_ERROR(&theErr);
 	}
 	
 	return 0;
 }
 
-static int intsezcaGetGraphicLimits(char *fname)
+static int intsezcaGetGraphicLimits(char *fname, int namlen, Sciclean sciclean)
 {
 int m,n,d1,d2;
 char **pvs MAY_ALIAS;
 MultiArgRec args[2];
-LcaError theErr;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,1);
 	CheckLhs(1,2);
 
 	GetRhsVar(1,"S",&m,&n,&pvs);
+	SCICLEAN_SVAR(pvs);
 	CheckColumn(1,m,n);
 
 	CreateVar(2, "d", &m, &n, &d1);
@@ -293,29 +316,27 @@ LcaError theErr;
 	MSetArg(args[0], sizeof(double), stk(d1), 0); 
 	MSetArg(args[1], sizeof(double), stk(d2), 0); 
 
-	lcaErrorInit(&theErr);
-	if ( multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetGraphicLimits, NumberOf(args), args, &theErr) ) {
+	if ( multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetGraphicLimits, NumberOf(args), args, theErr) ) {
 		for ( n=1; n<=Lhs; n++ )
 			LhsVar(n) = Rhs + n;
-	} else {
-		LCA_RAISE_ERROR(&theErr);
 	}
 	
 	return 0;
 }
 
-static int intsezcaGetStatus(char *fname)
+static int intsezcaGetStatus(char *fname, int namlen, Sciclean sciclean)
 {
 TS_STAMP *ts MAY_ALIAS;
-int      hasImag, m,n,i,j;
+int      hasImag, m,n,i,j, status;
 char     **pvs MAY_ALIAS;
-LcaError theErr;
+LcaError *theErr = errCreate(sciclean);
 
 MultiArgRec args[3];
 
 	CheckRhs(1,1);
 	CheckLhs(1,3);
 	GetRhsVar(1,"S",&m,&n,&pvs);
+	SCICLEAN_SVAR(pvs);
 	CheckColumn(1,m,n);
 
 	MSetArg(args[0], sizeof(TS_STAMP), 0,       &ts); /* timestamp */
@@ -329,8 +350,12 @@ MultiArgRec args[3];
 	hasImag = 1;
  	CreateCVar(4,"d",&hasImag,&m,&n,&i,&j);
 
-	lcaErrorInit(&theErr);
-	if ( multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetStatus, NumberOf(args), args, &theErr) ) {
+	status = multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetStatus, NumberOf(args), args, theErr);
+
+	/* If ts was created then register a cleanup */
+	SCICLEAN(ts);
+
+	if ( status ) {
 
 		s2iInPlace(args[2].buf, m);
  		LhsVar(1)=3;
@@ -344,78 +369,75 @@ MultiArgRec args[3];
 				multi_ezca_ts_cvt( m, ts, stk(i), stk(j) );
 			}
 		}
-	} else {
-		LCA_RAISE_ERROR(&theErr);
 	}
-	if ( ts )
-		free( ts );
 
  	return 0;
 }
 
-static int intsezcaGetPrecision(char *fname)
+static int intsezcaGetPrecision(char *fname, int namlen, Sciclean sciclean)
 {
 int m,n,i;
 char  **pvs MAY_ALIAS;
 MultiArgRec	args[1];
-LcaError theErr;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,1);
 	CheckLhs(1,1);
 	GetRhsVar(1,"S",&m,&n,&pvs);
+	SCICLEAN_SVAR(pvs);
 	CheckColumn(1,m,n);
 
 	CreateVar(2,"i",&m,&n,&i);
 
 	MSetArg(args[0], sizeof(short), istk(i), 0);
 
-	lcaErrorInit(&theErr);
-	if ( multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetPrecision, NumberOf(args), args, &theErr) ) {
+	if ( multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetPrecision, NumberOf(args), args, theErr) ) {
 		s2iInPlace(istk(i),m);
 		LhsVar(1) = 2;
-	} else {
-		LCA_RAISE_ERROR(&theErr);
 	}
  	return 0;
 }
 
 typedef char units_string[EZCA_UNITS_SIZE];
 
-static int intsezcaGetUnits(char *fname)
+static int intsezcaGetUnits(char *fname, int namlen, Sciclean sciclean)
 {
-int  m,n,i;
+int  m,n,i,status;
 char **pvs MAY_ALIAS,**tmp;
 units_string *strbuf MAY_ALIAS = 0;
 MultiArgRec  args[1];
-LcaError theErr;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,1);
 	CheckLhs(1,1);
 	GetRhsVar(1,"S",&m,&n,&pvs);
+	SCICLEAN_SVAR(pvs);
 	CheckColumn(1,m,n);
 
 	MSetArg(args[0], sizeof(units_string), 0, &strbuf);
 
-	lcaErrorInit(&theErr);
-	if ( multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetUnits, NumberOf(args), args, &theErr) &&
+	status = multi_ezca_get_misc(pvs, m, (MultiEzcaFunc)ezcaGetUnits, NumberOf(args), args, theErr);
+
+	/* if strbuf was created register a cleanup */
+	SCICLEAN(strbuf);
+
+	if ( status && 
 		 /* scilab expects NULL terminated char** list */
 		 (tmp = malloc(sizeof(char*) * (m+1))) ) {
 		for ( i=0; i<m; i++ ) {
 			tmp[i] = strbuf[i];
 		}
 		tmp[m] = 0;
+		SCICLEAN(tmp); /* register cleanup; CreateVarFromPtr may fail and execute 'return 0' */
  		CreateVarFromPtr(2, "S",&m,&n,tmp);
-		free(tmp);
  		LhsVar(1)= 2;
-	} else {
-		LCA_RAISE_ERROR(&theErr);
 	}
- 	free(strbuf);
+
  	return 0;
 }
 
 
-static int intsezcaGetRetryCount(char *fname)
+static int intsezcaGetRetryCount(char *fname, int namlen, Sciclean sciclean)
 {
 int m=1,i;
 
@@ -427,12 +449,10 @@ int m=1,i;
 	return 0;
 }
 
-static int intsezcaSetRetryCount(char *fname)
+static int intsezcaSetRetryCount(char *fname, int namlen, Sciclean sciclean)
 {
 int m,n,i;
-LcaError theErr;
-
-	lcaErrorInit(&theErr);
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,1);
 	CheckLhs(1,1);
@@ -440,18 +460,17 @@ LcaError theErr;
 	CheckScalar(1,m,n);
 
 	if ( (int)*istk(i) < 1 ) {
-		lcaSetError(&theErr, EZCA_INVALIDARG, "lcaSetRetryCount(): arg >= 1 expected");
+		lcaSetError(theErr, EZCA_INVALIDARG, "lcaSetRetryCount(): arg >= 1 expected");
 		goto cleanup;
 	}
 	ezcaSetRetryCount(*istk(i));
 
 cleanup:
 	LhsVar(1)=0;
-	LCA_RAISE_ERROR(&theErr);
 	return 0;
 }
 
-static int intsezcaGetTimeout(char *fname)
+static int intsezcaGetTimeout(char *fname, int namlen, Sciclean sciclean)
 {
 int m=1,i;
 
@@ -463,13 +482,12 @@ int m=1,i;
 	return 0;
 }
 
-static int intsezcaSetTimeout(char *fname)
+static int intsezcaSetTimeout(char *fname, int namlen, Sciclean sciclean)
 {
 int m,n,i;
-LcaError theErr;
+LcaError *theErr = errCreate(sciclean);
 float timeout;
 
-	lcaErrorInit(&theErr);
 	CheckRhs(1,1);
 	CheckLhs(1,1);
 	GetRhsVar(1,"r",&m,&n,&i);
@@ -477,18 +495,17 @@ float timeout;
 	timeout = *sstk(i);
 
 	if ( timeout < 0.001 ) {
-		lcaSetError(&theErr, EZCA_INVALIDARG, "Timeout arg must be >= 0.001");
+		lcaSetError(theErr, EZCA_INVALIDARG, "Timeout arg must be >= 0.001");
 		goto cleanup;
 	}
 	ezcaSetTimeout(timeout);
 
 cleanup:
-	LCA_RAISE_ERROR(&theErr);
 	LhsVar(1)=0;
 	return 0;
 }
 
-static int intsezcaDelay(char *fname)
+static int intsezcaDelay(char *fname, int namlen, Sciclean sciclean)
 {
 int m,n,i,rc;
 	CheckRhs(1,1);
@@ -497,8 +514,7 @@ int m,n,i,rc;
 	CheckScalar(1,m,n);
 	if ( (rc = ezcaDelay(*sstk(i))) ) {
 		char *msg="lcaDelay";
-		LcaError theErr;
-		lcaErrorInit(&theErr);
+		LcaError *theErr = errCreate(sciclean);
 		switch ( rc ) {
 			case EZCA_INVALIDARG: msg = "lcaDelay: need 1 timeout arg > 0";
 			break;
@@ -507,15 +523,14 @@ int m,n,i,rc;
 			default:
 			break;
 		}
-		lcaSetError(&theErr, rc, msg);
-		LCA_RAISE_ERROR(&theErr);
+		lcaSetError(theErr, rc, msg);
 	}
 	LhsVar(1)=0;
 	return 0;
 }
 
 
-static int intsezcaLastError(char *fname)
+static int intsezcaLastError(char *fname, int namlen, Sciclean sciclean)
 {
 int m, ntmp, i, *src;
 LcaError *ple = lcaGetLastError();
@@ -544,7 +559,7 @@ LcaError *ple = lcaGetLastError();
 	return 0;
 }
 
-static int intsezcaDebugOn(char *fname)
+static int intsezcaDebugOn(char *fname, int namlen, Sciclean sciclean)
 {
 	CheckRhs(0,0);
 	CheckLhs(1,1);
@@ -553,7 +568,7 @@ static int intsezcaDebugOn(char *fname)
 	return 0;
 }
 
-static int intsezcaDebugOff(char *fname)
+static int intsezcaDebugOff(char *fname, int namlen, Sciclean sciclean)
 {
 	CheckRhs(0,0);
 	CheckLhs(1,1);
@@ -562,16 +577,17 @@ static int intsezcaDebugOff(char *fname)
 	return 0;
 }
 
-static int intsezcaClearChannels(char *fname)
+static int intsezcaClearChannels(char *fname, int namlen, Sciclean sciclean)
 {
 int m,n;
 char **s MAY_ALIAS;
-LcaError theErr;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(0,1);
 	CheckLhs(1,1);
 	if ( Rhs > 0 ) {
 		GetRhsVar(1, "S", &m, &n, &s);
+		SCICLEAN_SVAR(s);
 		CheckColumn(1,m,n);
 		if ( 1 == m && 0 == *s[0] ) {
 			s = 0;
@@ -582,15 +598,15 @@ LcaError theErr;
 		m = -1;
 	}
 
-	lcaErrorInit(&theErr);
-	if ( multi_ezca_clear_channels(s,m,&theErr) ) {
-		LCA_RAISE_ERROR(&theErr);
+	if ( multi_ezca_clear_channels(s,m,theErr) ) {
+		/* error */
+		return 0;
 	}
 		
 	return 0;
 }
 
-static int intsezcaSetSeverityWarnLevel(char *fname)
+static int intsezcaSetSeverityWarnLevel(char *fname, int namlen, Sciclean sciclean)
 {
 int m,n,i;
 	CheckRhs(1,1);
@@ -602,99 +618,90 @@ int m,n,i;
 	return 0;
 }
 
-static int intsezcaSetMonitor(char *fname)
+static int intsezcaSetMonitor(char *fname, int namlen, Sciclean sciclean)
 {
 int mpvs, mtmp, ntmp, itmp, n = 0;
 char     **pvs MAY_ALIAS;
 char      type  = ezcaNative;
-LcaError  theErr;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,3);
 	CheckLhs(1,1);
 	LhsVar(1) = 0;
 
  	GetRhsVar(1,"S",&mpvs,&ntmp,&pvs);
+	SCICLEAN_SVAR(pvs);
  	CheckColumn(1,mpvs,ntmp);
-
-	lcaErrorInit(&theErr);
 
 	if ( Rhs > 1 ) {
 		GetRhsVar(2, "i", &mtmp, &ntmp, &itmp);
 		CheckScalar(2, mtmp, ntmp);
 		n = *istk(itmp);
-		if ( Rhs > 2 && !arg2ezcaType(&type,3, &theErr) )
+		if ( Rhs > 2 && !arg2ezcaType(&type,3, theErr) )
 			goto cleanup;
 	}
 
-	(void) multi_ezca_set_mon(pvs, mpvs, type, n, &theErr);
+	(void) multi_ezca_set_mon(pvs, mpvs, type, n, theErr);
 
 cleanup:
-	LCA_RAISE_ERROR(&theErr);
-
 	return 0;
 }
 
-static int intsezcaNewMonitorValue(char *fname)
+static int intsezcaNewMonitorValue(char *fname, int namlen, Sciclean sciclean)
 {
 int mpvs, ntmp, i;
 char     **pvs MAY_ALIAS;
 char      type  = ezcaNative;
-LcaError  theErr;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,2);
 	CheckLhs(1,1);
 
  	GetRhsVar(1,"S",&mpvs,&ntmp,&pvs);
+	SCICLEAN_SVAR(pvs);
  	CheckColumn(1,mpvs,ntmp);
 
-	lcaErrorInit(&theErr);
-
-	if ( Rhs > 1 && !arg2ezcaType(&type,2,&theErr) )
+	if ( Rhs > 1 && !arg2ezcaType(&type,2,theErr) )
 		goto cleanup;
 
 	ntmp = 1;
 	CreateVar(Rhs+1,"i",&mpvs,&ntmp,&i);
  		
-	(void) multi_ezca_check_mon(pvs, mpvs, type, istk(i), &theErr);
+	(void) multi_ezca_check_mon(pvs, mpvs, type, istk(i), theErr);
 
 	LhsVar(1) = Rhs+1;
 
 cleanup:
-	LCA_RAISE_ERROR(&theErr);
-
 	return 0;
 }
 
-static int intsezcaNewMonitorWait(char *fname)
+static int intsezcaNewMonitorWait(char *fname, int namlen, Sciclean sciclean)
 {
 int mpvs, ntmp;
 char     **pvs MAY_ALIAS;
 char      type  = ezcaNative;
-LcaError  theErr;
+LcaError *theErr = errCreate(sciclean);
 
 	CheckRhs(1,2);
 	CheckLhs(1,1);
 
  	GetRhsVar(1,"S",&mpvs,&ntmp,&pvs);
+	SCICLEAN_SVAR(pvs);
  	CheckColumn(1,mpvs,ntmp);
 
-	lcaErrorInit(&theErr);
-
-	if ( Rhs > 1 && !arg2ezcaType(&type,2,&theErr) )
+	if ( Rhs > 1 && !arg2ezcaType(&type,2,theErr) )
 		goto cleanup;
 
-	(void) multi_ezca_wait_mon(pvs, mpvs, type, &theErr);
+	(void) multi_ezca_wait_mon(pvs, mpvs, type, theErr);
 
 cleanup:
-	LCA_RAISE_ERROR(&theErr);
-
 	return 0;
 }
 
 #ifdef WITH_ECDRGET
 #include <ecget.h>
 
-static int intsecdrGet(char *fname)
+static int intsecdrGet(char *fname, int namlen, Sciclean sciclean)
 {
 long *buf;
 
@@ -704,6 +711,7 @@ char **s;
 	CheckRhs(1,1);
 	CheckLhs(1,1);
 	GetRhsVar(1, "S", &m, &n, &s);
+	SCICLEAN_SVAR(s);
 #if 0 /* storage of a string -> matrix is strange:
        * I get 'blah' m:1/n:4...
 	   */
@@ -711,40 +719,40 @@ char **s;
 #endif
 	CheckRow(1,m,n);
 	ecdrget(s[0], &n,&buf,&nord);
+	SCICLEAN(buf);
 	CreateVarFromPtr(2,"i",&m,&nord,&buf);
 	if (buf) {
  		LhsVar(1)=2;
-		free(buf);
 	}
  return 0;
 }
 #endif
 
 static GenericTable Tab[]={
-  {(Myinterfun)sci_gateway, intsezcaGet,					"lcaGet"},
-  {(Myinterfun)sci_gateway, intsezcaPut,					"lcaPut"},
-  {(Myinterfun)sci_gateway, intsezcaPutNoWait,				"lcaPutNoWait"},
-  {(Myinterfun)sci_gateway, intsezcaGetNelem,				"lcaGetNelem"},
-  {(Myinterfun)sci_gateway, intsezcaGetControlLimits,		"lcaGetControlLimits"},
-  {(Myinterfun)sci_gateway, intsezcaGetGraphicLimits,		"lcaGetGraphicLimits"},
-  {(Myinterfun)sci_gateway, intsezcaGetStatus,				"lcaGetStatus"},
-  {(Myinterfun)sci_gateway, intsezcaGetPrecision,			"lcaGetPrecision"},
-  {(Myinterfun)sci_gateway, intsezcaGetUnits,				"lcaGetUnits"},
-  {(Myinterfun)sci_gateway, intsezcaGetRetryCount,			"lcaGetRetryCount"},
-  {(Myinterfun)sci_gateway, intsezcaSetRetryCount,			"lcaSetRetryCount"},
-  {(Myinterfun)sci_gateway, intsezcaGetTimeout,				"lcaGetTimeout"},
-  {(Myinterfun)sci_gateway, intsezcaSetTimeout,				"lcaSetTimeout"},
-  {(Myinterfun)sci_gateway, intsezcaDebugOn,				"lcaDebugOn"},
-  {(Myinterfun)sci_gateway, intsezcaDebugOff,				"lcaDebugOff"},
-  {(Myinterfun)sci_gateway, intsezcaSetSeverityWarnLevel,	"lcaSetSeverityWarnLevel"},
-  {(Myinterfun)sci_gateway, intsezcaClearChannels,			"lcaClear"},
-  {(Myinterfun)sci_gateway, intsezcaSetMonitor,			    "lcaSetMonitor"},
-  {(Myinterfun)sci_gateway, intsezcaNewMonitorValue,	    "lcaNewMonitorValue"},
-  {(Myinterfun)sci_gateway, intsezcaNewMonitorWait,		    "lcaNewMonitorWait"},
-  {(Myinterfun)sci_gateway, intsezcaDelay,	    			"lcaDelay"},
-  {(Myinterfun)sci_gateway, intsezcaLastError,    			"lcaLastError"},
+  {(Myinterfun)sciclean_gateway, intsezcaGet,					"lcaGet"},
+  {(Myinterfun)sciclean_gateway, intsezcaPut,					"lcaPut"},
+  {(Myinterfun)sciclean_gateway, intsezcaPutNoWait,				"lcaPutNoWait"},
+  {(Myinterfun)sciclean_gateway, intsezcaGetNelem,				"lcaGetNelem"},
+  {(Myinterfun)sciclean_gateway, intsezcaGetControlLimits,		"lcaGetControlLimits"},
+  {(Myinterfun)sciclean_gateway, intsezcaGetGraphicLimits,		"lcaGetGraphicLimits"},
+  {(Myinterfun)sciclean_gateway, intsezcaGetStatus,				"lcaGetStatus"},
+  {(Myinterfun)sciclean_gateway, intsezcaGetPrecision,			"lcaGetPrecision"},
+  {(Myinterfun)sciclean_gateway, intsezcaGetUnits,				"lcaGetUnits"},
+  {(Myinterfun)sciclean_gateway, intsezcaGetRetryCount,			"lcaGetRetryCount"},
+  {(Myinterfun)sciclean_gateway, intsezcaSetRetryCount,			"lcaSetRetryCount"},
+  {(Myinterfun)sciclean_gateway, intsezcaGetTimeout,			"lcaGetTimeout"},
+  {(Myinterfun)sciclean_gateway, intsezcaSetTimeout,			"lcaSetTimeout"},
+  {(Myinterfun)sciclean_gateway, intsezcaDebugOn,				"lcaDebugOn"},
+  {(Myinterfun)sciclean_gateway, intsezcaDebugOff,				"lcaDebugOff"},
+  {(Myinterfun)sciclean_gateway, intsezcaSetSeverityWarnLevel,	"lcaSetSeverityWarnLevel"},
+  {(Myinterfun)sciclean_gateway, intsezcaClearChannels,			"lcaClear"},
+  {(Myinterfun)sciclean_gateway, intsezcaSetMonitor,		    "lcaSetMonitor"},
+  {(Myinterfun)sciclean_gateway, intsezcaNewMonitorValue,	    "lcaNewMonitorValue"},
+  {(Myinterfun)sciclean_gateway, intsezcaNewMonitorWait,	    "lcaNewMonitorWait"},
+  {(Myinterfun)sciclean_gateway, intsezcaDelay,	    			"lcaDelay"},
+  {(Myinterfun)sciclean_gateway, intsezcaLastError,    			"lcaLastError"},
 #ifdef WITH_ECDRGET
-  {(Myinterfun)sci_gateway, intsecdrGet,					"lecdrGet"},
+  {(Myinterfun)sciclean_gateway, intsecdrGet,					"lecdrGet"},
 #endif
 };
 
@@ -756,7 +764,7 @@ CtrlCStateRec save;
 	multi_ezca_ctrlC_prologue(&save);
 
 	Rhs = Max(0, Rhs);
-	(*(Tab[Fin-1].f))(Tab[Fin-1].name,Tab[Fin-1].F);
+	(*(Tab[Fin-1].f))(Tab[Fin-1].name, Tab[Fin-1].F);
 
 	multi_ezca_ctrlC_epilogue(&save);
   return 0;
